comments removed, documentation started, codebase updated

--- a/lab-mitchell/package.json
+++ b/lab-mitchell/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack",
+    "lint": "eslint .",
     "test": "jest",
     "watch": "webpack-dev-server --inline --hot"
   },
